# tls-cert-checker

./: README.md  domains.txt.example  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
src/tls_cert_checker/: checker.py
tests/: test_output.py
tls-cert-checker/: .gitignore  LICENSE  README.md  pyproject.toml
tls-cert-checker/.github/workflows/: ci.yml
tls-cert-checker/src/tls_cert_checker/: __init__.py  checker.py  cli.py  output.py
tls-cert-checker/tests/: test_checker.py  test_cli.py  test_output.py
