[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tls-cert-checker"
dynamic = ["version"]
description = "A small Python CLI tool for checking TLS certificate expiration, issuer and validity status for one or more domains."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["cryptography>=42.0"]

[project.scripts]
tls-cert-checker = "tls_cert_checker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "tls_cert_checker.__version__"}

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
