[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tls-cert-checker"
version = "0.1.0"
description = "A small Python CLI tool for checking TLS certificate expiration, issuer and validity status for one or more domains."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["cryptography>=42.0"]

[project.scripts]
tls-cert-checker = "tls_cert_checker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
